--- a/.env
+++ b/.env
@@ -12,4 +12,4 @@ AUTH0_CLIENT_SECRET=ipTMSFACYfekqpLV5DHZGIYHay_11zCBtlKOGuK6pu_G37hYEdLd0vzAsdVk
 AUTH0_COOKIE_SECRET=oOmwQbmJJJadcvLRuyWJ7OkcsSx9pO8e
 
 # A url your application is accessible from. Update this as appropriate.
-AUTH0_BASE_URL=http://kieranharrison.com.au/
+AUTH0_BASE_URL=https://kieranharrison.com.au/
